# LCComparison2026

./: .gitignore  PROJECT_SPECIFICATION.md  README.md  pyproject.toml  requirements.txt
config/: config.yaml  existing_model_config.yaml
config/imagery_sources/: custom.yaml  naip.yaml  planet.yaml  sentinel2.yaml
config/model_configs/: prithvi.yaml  satlas.yaml  ssl4eo.yaml
docs/: architecture.md  cli-reference.md  configuration.md  getting-started.md  workflow.md
notebooks/: 01_quickstart.ipynb  02_model_comparison.ipynb
src/: __main__.py  config_schema.py  pipeline.py
src/classification/: classifier.py  ensemble.py
src/data/: custom_labels.py  gee_export.py  label_generator.py  label_manager.py  local_imagery.py  preprocessor.py  tile_manager.py
src/integration/: existing_model_integration.py
src/models/: embedding_base.py  model_downloader.py  model_registry.py  prithvi_model.py  satlas_model.py  ssl4eo_model.py
src/processing/: batch_processor.py  resolution_matcher.py
src/spatial/: boundary_processor.py  focus_area_manager.py  mosaic.py  zonal_statistics.py
src/training/: trainer.py  validation.py
tests/: test_accuracy.py  test_batch_processor.py  test_classifier.py  test_config.py  test_discovery.py  test_embedding_models.py  test_ensemble.py  test_error_analysis.py  test_gee_export.py  test_labels.py  test_local_imagery.py  test_model_downloader.py  test_mosaic.py  test_preprocessor.py  test_report_generator.py  test_resolution_matcher.py  test_spatial_analysis.py  test_tile_manager.py  test_training.py  test_validation_helpers.py
(+7 files in other folders)
